--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,34 @@ body {
   display: flex;
   justify-content: space-between;
 }
+.container-div1 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container-div2 {
+  border: 2px solid white;
+  margin: 5px;
+  padding: 16px;
+}
 li {
   border: 10px;
   border-color: white;
+}
+label {
+  display: block;
+}
+.button1 {
+  height: 25px;
+}
+
+input {
+  margin-top: 5px;
+}
+
+span {
+  margin: 5px;
+}
+.submt-btn {
+  margin: 5px auto auto auto;
 }
