--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,69 +3,85 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+	--foreground-rgb: 0, 0, 0;
+	--background-start-rgb: 214, 219, 220;
+	--background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+	:root {
+		--foreground-rgb: 255, 255, 255;
+		--background-start-rgb: 0, 0, 0;
+		--background-end-rgb: 0, 0, 0;
+	}
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-  padding-top: 2vw;
-  padding-left: 10vw;
-  padding-right: 10vw;
+	color: rgb(var(--foreground-rgb));
+	background: linear-gradient(
+			to bottom,
+			transparent,
+			rgb(var(--background-end-rgb))
+		)
+		rgb(var(--background-start-rgb));
+	padding-top: 2vw;
+	padding-left: 10vw;
+	padding-right: 10vw;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
 }
 .container-div {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .container-div1 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 }
 .container-div2 {
-  border: 2px solid white;
-  margin: 5px;
-  padding: 16px;
+	border: 2px solid white;
+	margin: 5px;
+	padding: 16px;
 }
 li {
-  border: 10px;
-  border-color: white;
+	border: 10px;
+	border-color: white;
 }
 label {
-  display: block;
+	display: block;
 }
 .button1 {
-  height: 25px;
+	height: 25px;
 }
 
 input {
-  margin-top: 5px;
+	margin-top: 5px;
 }
 
 span {
-  margin: 5px;
+	margin: 5px;
 }
 .submt-btn {
-  margin: 5px auto auto auto;
+	margin: 5px auto auto auto;
+}
+.rel-div {
+	position: relative;
+}
+
+.abs-div {
+	position: absolute;
+	background-color: #1c1c1e;
+	width: 300px;
+	height: 500px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	align-items: center;
+	justify-content: center;
+	text-align: center;
 }
